--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Timeline Game</title>
+    <script src="https://kit.fontawesome.com/67c6a68114.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="/css/main.css"/>
 </head>
 <body>
     <div id="app"></div>
