--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <title>Timeline Game</title>
     <script src="https://kit.fontawesome.com/67c6a68114.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/main.css"/>
+    <link rel="stylesheet" href="/css/card.css"/>
 </head>
 <body>
     <div id="app"></div>
