--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <script src="https://kit.fontawesome.com/67c6a68114.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/main.css"/>
     <link rel="stylesheet" href="/css/card.css"/>
+    <link rel="stylesheet" href="/css/basic-card.css"/>
 </head>
 <body>
     <div id="app"></div>
