feat: add ribbon to indicate timeline
New drop zone highlighting.

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/css/card.css"/>
     <link rel="stylesheet" href="/css/card-animations.css"/>
     <link rel="stylesheet" href="/css/basic-card.css"/>
+    <link rel="stylesheet" href="/css/timeline.css"/>
 </head>
 <body>
     <div id="app"></div>
