--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/css/card-animations.css"/>
     <link rel="stylesheet" href="/css/basic-card.css"/>
     <link rel="stylesheet" href="/css/timeline.css"/>
+    <link rel="stylesheet" href="/css/layout.css"/>
 </head>
 <body>
     <div id="app"></div>
