feat: change title font

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="/css/basic-card.css"/>
     <link rel="stylesheet" href="/css/timeline.css"/>
     <link rel="stylesheet" href="/css/layout.css"/>
+    <link rel="stylesheet" href="/css/fonts/riffic_bold_czech/stylesheet.css"/>
 </head>
 <body>
     <div id="app"></div>
