--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,6 @@
 <body>
     <div id="app"></div>
     <script src="/js/compiled/base.js"></script>
-    <script src="DragDropTouch.js"></script>
+    <script src="/js/drag-drop-touch/DragDropTouch.js"></script>
 </body>
 </html>
