--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/css/main.css"/>
     <link rel="stylesheet" href="/css/card.css"/>
     <link rel="stylesheet" href="/css/card-animations.css"/>
+    <link rel="stylesheet" href="/css/hourglass-animation.css"/>
     <link rel="stylesheet" href="/css/basic-card.css"/>
     <link rel="stylesheet" href="/css/timeline.css"/>
     <link rel="stylesheet" href="/css/layout.css"/>
