--- a/public/index.html
+++ b/public/index.html
@@ -16,5 +16,6 @@
 <body>
     <div id="app"></div>
     <script src="/js/compiled/base.js"></script>
+    <script src="/js/libs/csswarp/csswarp.0.7.min.js"></script>
 </body>
 </html>
