--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="/css/timeline.css"/>
     <link rel="stylesheet" href="/css/layout.css"/>
     <link rel="stylesheet" href="/css/fonts/riffic_bold_czech/stylesheet.css"/>
+    <link rel="stylesheet" href="/css/fonts/open-sans/stylesheet.css"/>
 </head>
 <body>
     <div id="app"></div>
