--- a/public/index.html
+++ b/public/index.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <title>Timeline Game</title>
     <script src="https://kit.fontawesome.com/67c6a68114.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/css/main.css"/>
-    <link rel="stylesheet" href="/css/card.css"/>
-    <link rel="stylesheet" href="/css/card-animations.css"/>
-    <link rel="stylesheet" href="/css/hourglass-animation.css"/>
-    <link rel="stylesheet" href="/css/basic-card.css"/>
-    <link rel="stylesheet" href="/css/timeline.css"/>
-    <link rel="stylesheet" href="/css/layout.css"/>
-    <link rel="stylesheet" href="/css/fonts/riffic_bold_czech/stylesheet.css"/>
-    <link rel="stylesheet" href="/css/fonts/open-sans/stylesheet.css"/>
+    <link rel="stylesheet" href="css/main.css"/>
+    <link rel="stylesheet" href="css/card.css"/>
+    <link rel="stylesheet" href="css/card-animations.css"/>
+    <link rel="stylesheet" href="css/hourglass-animation.css"/>
+    <link rel="stylesheet" href="css/basic-card.css"/>
+    <link rel="stylesheet" href="css/timeline.css"/>
+    <link rel="stylesheet" href="css/layout.css"/>
+    <link rel="stylesheet" href="css/fonts/riffic_bold_czech/stylesheet.css"/>
+    <link rel="stylesheet" href="css/fonts/open-sans/stylesheet.css"/>
 </head>
 <body>
     <div id="app"></div>
-    <script src="/js/compiled/base.js"></script>
-    <script src="/js/libs/csswarp/csswarp.0.7.min.js"></script>
+    <script src="js/compiled/base.js"></script>
+    <script src="js/libs/csswarp/csswarp.0.7.min.js"></script>
 </body>
 </html>
