feat: use fontAwesome offline
https://fontawesome.com/how-to-use/on-the-web/setup/hosting-font-awesome-yourself

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Timeline Game</title>
-    <script src="https://kit.fontawesome.com/67c6a68114.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="fontawesome/css/fontawesome.min.css"/>
+    <link rel="stylesheet" href="fontawesome/css/solid.min.css"/>
+    <link rel="stylesheet" href="fontawesome/css/brands.min.css"/>
     <link rel="stylesheet" href="css/main.css"/>
     <link rel="stylesheet" href="css/card.css"/>
     <link rel="stylesheet" href="css/card-animations.css"/>
